--- a/social-media-next/components/Layout/header/ProfileButton/ProfileOptions.module.css
+++ b/social-media-next/components/Layout/header/ProfileButton/ProfileOptions.module.css
@@ -5,3 +5,10 @@
   flex-basis: 100%;
   margin: 1em;
 }
+
+.options-parent a:visited,
+.options-parent a:link,
+.options-parent a {
+  /* color: var(--color); */
+  color: black;
+}
